<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.triviandroid.MainActivity" >

    <ImageView
        android:id="@+id/titleLogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="bottom"
        android:contentDescription="@string/logo_desc"
        android:paddingBottom="0dp"
        android:paddingTop="32dp"
        android:src="@drawable/triviandroid_logo" />

    <ImageView
        android:id="@+id/titleWordImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_word_image_desc"
        android:src="@drawable/triviandroid_title_solid" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/start_button_text" />

</LinearLayout>